--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ plugins {
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
+    
+    // https://mvnrepository.com/artifact/junit/junit
+	testImplementation group: 'junit', name: 'junit', version: '4.4'
+	testCompile "junit:junit:4.11"
+    
 }
 
 application {
